Initial nav bar created. NOT STICKY YET

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+<nav class="clearfix">
+  <h1> Sticky Nav</h1>
+  <ul>
+    <li>Info</li>
+    <li>Contact</li>
+    <li>About</li>
+    <li>Blog </li>
+  </ul>
+</nav>
+
+
 
 </body>
 </html>
